--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,4 @@
-$ git status
-metadata/
-    [...]
-    # Untracked files:
-    [...]
-    #       Documentation/foo.html
-    #       Documentation/gitignore.html
-    #       file.o
-    #       lib.a
-    #       src/internal.o
-    [...]
-    $ cat .git/info/exclude
-    # ignore objects and archives, anywhere in the tree.
-    *.[oa]
-    $ cat Documentation/.gitignore
-    # ignore generated html files,
-    *.html
-    # except foo.html which is maintained by hand
-    !foo.html
-    $ git status
-    [...]
-    # Untracked files:
-    [...]
-    #       Documentation/foo.html
-    [...]
+# ignore all index
+*.index
+# ignore all class
+*.class
